--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-script: nosetests
+script: nosetests --with-coverage
+after_success:
+  - codecov
